--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "reflect-metadata": "^0.1.13",
