--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "bcryptjs": "^2.4.3",
+    "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
