feat: :sparkles: add  .env example
add  .env example

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 
 APP_PORT =
 
+#POSTGRES config
+PORT_POSTGRES =
+USER_POSTGRES =
+PASSWORD_POSTGRES =
+DATABASE_POSTGRES =
+
 #AUTH CONFIG
 SECRET_TOKEN =
 SECRTE_REFRESH_TOKEN =
