fix: :bug: Tuning docker-compose.example.yml file
Tuning docker-compose.example.yml file

--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -7,9 +7,9 @@ services:
     ports:
       - 5432:5432
     environment:
-      - POSTGRES_USER=docker
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=app_peladeiro
+      - POSTGRES_USER=
+      - POSTGRES_PASSWORD=
+      - POSTGRES_DB=
     volumes:
       - pgdata:/data/postgres
 
