--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "test": "NODE_ENV=test jest --runInBand --detectOpenHandles"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.21",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
-    "@types/multer": "^1.4.7",
     "bcryptjs": "^2.4.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -33,6 +33,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "class-transformer": "^0.5.1",
     "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
