--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
+    "@types/supertest": "^2.0.12",
     "class-transformer": "^0.5.1",
     "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
@@ -44,6 +45,7 @@
     "nodemailer": "^6.7.2",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
+    "supertest": "^6.2.2",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.45",
     "uuid": "^8.3.2"
